<resources>
    <string name="app_name">LivePlugFlow</string>

    <string name="toggle_switch_flash_on">开启闪光灯</string>
    <string name="toggle_switch_flash_off">关闭闪光灯</string>
    <string name="app_camera">切换摄像头</string>
    <string name="live_push">开始推流</string>
    <string name="live_stop">结束推流</string>
    <string name="toggle_switch_beauty_on">美颜开启</string>
    <string name="toggle_switch_beauty_off">美颜关闭</string>

    <string name="no_camera_permission">没有权限使用摄像头，请开启摄像头权限</string>
    <string name="no_record_audio_permission">没有权限使用录音，请开启录音权限</string>

    <string name="VIDEO_CAPTURE_FPS">视频采集帧率（实时帧率）:</string>
    <string name="AUDIO_ENCODER_FPS">音频编码帧率（实时帧率）:</string>
    <string name="VIDEO_ENCODER_FPS">视频编码帧率（实时帧率）:</string>
    <string name="OUTPUT_BITRATE">输出码率（实时码率）:</string>
    <string name="AV_OUTPUT_DIFF">当前输出流，audio pts与video pts的差值:</string>
    <string name="AUDIO_OUTPUT_FPS">音频输出帧率（实时帧率）:</string>
    <string name="VIDEO_OUTPUT_FPS">视频输出帧率（实时帧率）:</string>
    <string name="STREAM_PUBLISH_TIME">推流发布耗时（推流开始到发布流成功耗时）:</string>
    <string name="STREAM_SERVER_IP">推流服务器IP:</string>
    <string name="VIDEO_DELAY_DURATION">视频延迟时长:</string>
    <string name="AUDIO_DELAY_DURATION">音频延迟时长:</string>
    <string name="VIDEO_CACHE_FRAME_CNT">缓冲队列视频帧数:</string>
    <string name="AUDIO_CACHE_FRAME_CNT">缓冲队列音频帧数:</string>
    <string name="VIDEO_CACHE_BYTE_SIZE">缓冲队列视频数据总数:</string>
    <string name="AUDIO_CACHE_BYTE_SIZE">缓冲队列音频数据总数:</string>
    <string name="VIDEO_FRAME_DISCARD_CNT">视频丢弃总帧数:</string>
    <string name="AUDIO_FRAME_DISCARD_CNT">音频丢弃总帧数:</string>
    <string name="CUR_VIDEO_BUEATY_DURATION">当前视频帧美颜耗时:</string>
    <string name="CUR_VIDEO_ENCODER_DURATION">当前视频帧编码耗时:</string>
    <string name="cur_video_encode_bitrate">当前视频编码码率:</string>

    <string name="illegal_output_resolution">选择输出分辨率过大</string>

    <string name="VIDEO_OUTPUT_FRAME_COUNT">获取视频流已发送帧数:</string>
    <string name="VIDEO_DATA">视频流已发送数据量:</string>
    <string name="VIDEO_BUFFER_COUNT">当前手机端缓存的视频帧总数:</string>
    <string name="VIDEO_DROPPED_FRAMECOUNT">当前直播视频流丢帧总数:</string>
    <string name="AUDIO_DATA">音频流已发送数据量:</string>
    <string name="close_sound_off">静音关闭</string>
    <string name="open_sound_off">静音开启</string>
    <string name="advanced_settings">高级设置</string>
    <string name="skin_care_level">美颜级别</string>
    <string name="import_rtmp_address">请输入rtmp服务器的地址</string>
    <string name="prepare_live">准备直播</string>
    <string name="_240p">24P</string>
    <string name="_360p">36P</string>
    <string name="_480p">48P</string>
    <string name="_540p">54P</string>
    <string name="_720p">72P</string>
    <string name="_1080p">108P</string>
    <string name="landscape">横屏</string>
    <string name="portrait_screen">竖屏</string>
    <string name="preposition_camera">前置摄像头镜像</string>
    <string name="frame_rate">帧率</string>
    <string name="frame_rate_0_30">帧率必须是0~30之间</string>
    <string name="_30">30</string>
    <string name="min_bitrate">min bitrate</string>
    <string name="_500">500</string>
    <string name="max_bitrate">max bitrate</string>
    <string name="_800">800</string>
    <string name="best_bitrate">best bitrate</string>
    <string name="_600">600</string>
    <string name="initial_bitrate">initial bitrate</string>
    <string name="watermark_image_url">水印图片路径:</string>
    <string name="assets_alivc_wartermark_logo_png">assets://Alivc/wartermark/logo.png</string>
    <string name="marginx">marginX :</string>
    <string name="_14">14</string>
    <string name="marginy">marginY :</string>
    <string name="watermark_position">水印位置 (上右 1, 上左 2, 下右 3, 下左 4) :</string>
    <string name="_1">1</string>
</resources>
