<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:keepScreenOn="true"
    android:orientation="vertical">
    <!--android:keepScreenOn是否常量-->

    <!--直播显示的界面-->
    <SurfaceView
        android:id="@+id/camera_surface"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!--直播持续推流时的性能参数-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:visibility="gone">
        <include layout="@layout/performance_log" />
    </FrameLayout>

    <LinearLayout
        android:id="@+id/layout_preferences"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <ToggleButton
            android:id="@+id/toggle_live_push"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/live_push"
            android:textOn="@string/live_stop" />

        <ToggleButton
            android:id="@+id/toggle_camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/app_camera"
            android:textOn="@string/app_camera" />

        <ToggleButton
            android:id="@+id/toggle_flash_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/toggle_switch_flash_on"
            android:textOn="@string/toggle_switch_flash_off" />

        <ToggleButton
            android:id="@+id/btn_switch_beauty"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textOff="@string/toggle_switch_beauty_on"
            android:textOn="@string/toggle_switch_beauty_off" />
    </LinearLayout>

    <Button
        android:id="@+id/btn_stop_live"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/live_stop"
        android:visibility="gone" />

    <ToggleButton
        android:id="@+id/btn_mute"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right|end"
        android:layout_margin="10dp"
        android:textOff="@string/close_sound_off"
        android:textOn="@string/open_sound_off" />

    <Button
        android:id="@+id/btn_advance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:text="@string/advanced_settings" />
</FrameLayout>
