<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true"
        android:focusableInTouchMode="true">

        <TextView
            android:id="@+id/rtmpTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:text="@string/import_rtmp_address"
            android:textSize="16sp" />

        <EditText
            android:id="@+id/rtmpUrl"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rtmpTxt"
            android:text="" />

        <Button
            android:id="@+id/connectBT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/rtmpUrl"
            android:layout_marginTop="10dp"
            android:text="@string/prepare_live" />

        <RadioGroup
            android:id="@+id/resolution_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/connectBT"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/radiobutton0"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/_240p" />

            <RadioButton
                android:id="@+id/radiobutton1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/_360p" />

            <RadioButton
                android:id="@+id/radiobutton2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/_480p" />

            <RadioButton
                android:id="@+id/radiobutton3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/_540p" />

            <RadioButton
                android:id="@+id/radiobutton4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/_720p" />

            <RadioButton
                android:id="@+id/radiobutton5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/_1080p" />
        </RadioGroup>

        <RadioGroup
            android:id="@+id/rotation_group"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/resolution_group"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/screenOrientation1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/landscape" />

            <RadioButton
                android:id="@+id/screenOrientation2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/portrait_screen" />
        </RadioGroup>

        <LinearLayout
            android:id="@+id/audio_group"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/rotation_group">

            <CheckBox
                android:id="@+id/front_camera_mirror"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/preposition_camera" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_frame_rate"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_below="@id/audio_group"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:text="@string/frame_rate" />

            <EditText
                android:id="@+id/et_frame_rate"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginStart="5dp"
                android:hint="@string/frame_rate_0_30"
                android:inputType="number"
                android:text="@string/_30" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/layout_bitrate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_frame_rate"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_min_bitrate"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/min_bitrate"
                android:inputType="number"
                android:maxLines="1"
                android:text="@string/_500" />

            <EditText
                android:id="@+id/et_max_bitrate"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/max_bitrate"
                android:inputType="number"
                android:maxLines="1"
                android:text="@string/_800" />

            <EditText
                android:id="@+id/et_best_bitrate"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/best_bitrate"
                android:inputType="number"
                android:maxLines="1"
                android:text="@string/_600" />

            <EditText
                android:id="@+id/et_init_bitrate"
                android:layout_width="0dip"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/initial_bitrate"
                android:inputType="number"
                android:maxLines="1"
                android:text="@string/_600" />
        </LinearLayout>


        <LinearLayout
            android:id="@+id/watermark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/layout_bitrate"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/watermark_image_url" />

            <EditText
                android:id="@+id/watermark_path"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/assets_alivc_wartermark_logo_png" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/marginx" />

                    <EditText
                        android:id="@+id/dx"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_14" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/marginy" />

                    <EditText
                        android:id="@+id/dy"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_14" />
                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/watermark_position" />

                    <EditText
                        android:id="@+id/site"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/_1" />
                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</ScrollView>
